--- a/harbour-solver.desktop
+++ b/harbour-solver.desktop
@@ -3,7 +3,7 @@ Type=Application
 X-Nemo-Application-Type=silica-qt5
 Name=Solver
 Icon=Solver
-Exec=/usr/bin/sailfish-qml Solver
+Exec=sailfish-qml Solver
 
 [X-Sailjail]
 Permissions=UserDirs
