Fix: layouts. currently without python builds in spec

--- a/harbour-solver.desktop
+++ b/harbour-solver.desktop
@@ -2,7 +2,7 @@
 Type=Application
 X-Nemo-Application-Type=silica-qt5
 Name=Solver
-Icon=Solver
+Icon=harbour-solver
 Exec=/usr/bin/sailfish-qml harbour-solver
 
 [X-Sailjail]
