Fix: the desktop must include camera perms for proper orientation stuff

--- a/harbour-solver.desktop
+++ b/harbour-solver.desktop
@@ -6,6 +6,6 @@ Icon=harbour-solver
 Exec=sailfish-qml harbour-solver
 
 [X-Sailjail]
-Permissions=UserDirs
+Permissions=Camera;UserDirs
 OrganizationName=de.poetaster
 ApplicationName=Solver
